[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Textures/Dark Green.PNG" type="Texture" id=2]
[ext_resource path="res://assets/Textures/Light Green.PNG" type="Texture" id=3]
[ext_resource path="res://assets/Textures/Dark Grey.PNG" type="Texture" id=4]
[ext_resource path="res://src/scene/newPauseMenus.gd" type="Script" id=5]
[ext_resource path="res://src/scene/Settings Tab.tscn" type="PackedScene" id=6]

[node name="Control" type="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1040.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 312.0
margin_bottom = 600.0
rect_min_size = Vector2( 312, 600 )

[node name="NinePatchRect" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 316.0
margin_right = 724.0
margin_bottom = 600.0
rect_min_size = Vector2( 392, 0 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/NinePatchRect"]
margin_right = 30.0
margin_bottom = 600.0
rect_min_size = Vector2( 30, 0 )

[node name="NinePatchRect" type="VBoxContainer" parent="HBoxContainer/NinePatchRect"]
margin_left = 34.0
margin_right = 374.0
margin_bottom = 600.0
rect_min_size = Vector2( 340, 0 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/NinePatchRect/NinePatchRect"]
margin_right = 340.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/NinePatchRect/NinePatchRect"]
margin_top = 34.0
margin_right = 340.0
margin_bottom = 574.0
rect_min_size = Vector2( 340, 540 )
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect"]
margin_right = 20.0
margin_bottom = 540.0
rect_min_size = Vector2( 20, 540 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect"]
margin_left = 20.0
margin_right = 320.0
margin_bottom = 540.0
rect_min_size = Vector2( 300, 540 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer"]
margin_right = 300.0
margin_bottom = 540.0
rect_min_size = Vector2( 300, 0 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 300.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 1 )
text = "GAME PAUSED"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 300.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 300.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 50 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer/TextureButton"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 300.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 300.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 50 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer/TextureButton2"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 300.0
margin_bottom = 294.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 300.0
margin_bottom = 348.0
rect_min_size = Vector2( 0, 50 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer/TextureButton3"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Return to Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 300.0
margin_bottom = 382.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureButton4" type="TextureButton" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 300.0
margin_bottom = 436.0
rect_min_size = Vector2( 0, 50 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer/TextureButton4"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Quit Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/NinePatchRect"]
margin_left = 378.0
margin_right = 408.0
margin_bottom = 600.0
rect_min_size = Vector2( 30, 0 )

[node name="Control" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="HBoxContainer/NinePatchRect/NinePatchRect/NinePatchRect/HBoxContainer/VBoxContainer/TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="close_settings" from="Control" to="." method="_on_Control_close_settings"]
